# tile-editor

./: Cargo.toml  README.md
examples/: cubes.rs
src/: app.rs  graphics_state.rs  gui.rs  lib.rs  main.rs  mesh.rs  renderer.rs  shader.wgsl  state.rs  teditor.rs  texture.rs  vertex.rs  window_state.rs
src/app/: app.rs
src/graphics/: camera.rs  framebuffer.rs  light.rs  material.rs  matrices.rs  mesh.rs  mod.rs  model.rs  model_environment.rs  model_instance.rs  model_renderer.rs  model_ubershader.wgsl  pipeline.rs  pipeline_provider.rs  renderer.rs  shader.rs  shader_features.rs  shader_provider.rs  texture.rs  util.rs  vertex.rs  view.rs  voxel_map_graphics.rs
src/graphics/gbuffer/: gbuffer.rs  mod.rs  model_environment.rs  model_pipeline.rs  model_pipeline_provider.rs  model_renderer.rs  model_shader.rs  model_shader_provider.rs  model_ubershader.wgsl
src/graphics/light/: ambient_light.rs  directional_light.rs  light.rs  light_attenuation.rs  light_bundle.rs  light_mesh.rs  light_set.rs  mod.rs  point_light.rs
src/graphics/scene/: mod.rs  scene.rs
src/graphics/screen/: gbuffer_pipeline_provider.rs  gbuffer_point_light_renderer.rs  gbuffer_renderer.rs  mod.rs  (+15 more)
src/gui/: content_panel.rs  editor.rs  gui.rs  gui_material.rs  input.rs  map_editor.rs  material.rs  mod.rs  simple_editor.rs  voxel_editor.rs  voxel_set_editor.rs
src/voxel/: chunk.rs  chunk_iterator.rs  coords.rs  layer.rs  map.rs  mod.rs  selection.rs  size.rs  slot.rs  slot_iterator.rs  voxel.rs  voxel_map.rs
tests/: coordinates.rs  shader_provider.rs  test_file.txt  voxel.rs  voxel_map.rs
